      If a newly requested transport can share a connection with one of the
      list, it will.
      (Vincent Ladeuil)

    * Most functions now accept ``bzrlib.revision.NULL_REVISION`` to indicate
      the null revision, and consider using ``None`` for this purpose
      deprecated.  (Aaron Bentley)

    * Add the option user_encoding to the function
      - make_commit_message_template
      - show_diff_trees
      in order to move the user encoding at the UI level. (Goffredo Baroncelli)

    * New ``index`` module with abstract index functionality. This will be
      used during the planned changes in the repository layer. Currently the
      index layer provides a graph aware immutable index, a builder for the
      same index type to allow creating them, and finally a composer for
      such indices to allow the use of many indices in a single query. The
      index performance is not optimised, however the API is stable to allow
      development on top of the index. (Robert Collins)

    * ``bzrlib.dirstate.cmp_by_dirs`` can be used to compare two paths by
      their directory sections. This is equivalent to comparing
      ``path.split('/')``, only without having to split the paths.
      This has a Pyrex implementation available.
      (John Arbash Meinel)

    * New transport decorator 'unlistable+' which disables the list_dir
      functionality for testing.

    * New ``file_names.FileNames`` support class which mananges names
      for unlistable transport situations. (Robert Collins)

    * Deprecated ``change_entry`` in transform.py. (Ian Clatworthy)

    * RevisionTree.get_weave is now deprecated.  Tree.plan_merge is now used
      for performing annotate-merge.  (Aaron Bentley)

    * New EmailMessage class to create email messages. (Adeodato Simó)

    * Unused functions on the private interface KnitIndex have been removed.
      (Robert Collins)

    * New ``knit.KnitGraphIndex`` which provides a ``KnitIndex`` layered on top