@@ -45,8 +45,7 @@ class MsgEditorTest(TestCaseWithTransport):
     def test_commit_template(self):
         """Test building a commit message template"""
         working_tree = self.make_uncommitted_tree()
-        template = bzrlib.msgeditor.make_commit_message_template(working_tree,
-                                                     None)
+        template = bzrlib.msgeditor.make_commit_message_template(working_tree, None)
         self.assertEqualDiff(template,
 u"""\
 added:
